# DiffusionCurriculum

./: .gitignore  README.md  pyproject.toml
assets/: categories.json  objects.json  relations.json
configs/: attribute_gen.yaml  keys.yaml  object_gen.yaml  relation_gen.yaml  template_gen.yaml
scripts/: generate_attributes.py  generate_objects.py  generate_prompts.py  generate_qa.py  generate_relations.py  generate_templates.py  start_train.py  template_generator.py  test_api.py  train.py
src/api/: __init__.py  async_pool.py  stream_generator.py  wrapper.py
src/promptqa_generator/: prompt_generator.py  qa_generator.py
src/scene_graph_builder/: __init__.py  attribute_generator.py  difficulty.py  object_generator.py  relation_generator.py  sampler.py  sampler_v3.py  template_generator.py
src/train/: curriculum.py  ordered_dataloader.py  scorer.py  train.py  trainer.py
src/train/trainer/: d3po.py  ddpo.py  dpok.py  grpo.py
src/train/trainer/common/: ddim_with_logprob.py  state_tracker.py
src/utils/: __init__.py  logger.py  parser.py
