[project]
name = "diff-curr"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "bert-score>=0.3.13",
    "diffusers[torch]==0.33.1",
    "huggingface-hub[cli]>=0.30.2",
    "openai>=0.28.0",
    "peft>=0.15.2",
    "PyYAML>=6.0",
    "sentencepiece>=0.2.0",
    "torchvision>=0.21.0",
    "transformers>=4.51.3",
    "wandb>=0.19.9",
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"
